# pv204-TreesholdSignature

./: .env.1  .env.2  .env.3  Cargo.toml  README.md  auto_signer.py  cli.py  frost.py  keygen.py  nostr.py  pom.xml  pyproject.toml  required_shares_sign_event.py  requirements.txt  run_signers.py  sign_message.py  verify_note_signature.py
.github/workflows/: codacy.yml
app/: cli.py  keygen.py  models.py  nostr.py  signer.py
frost/: Cargo.toml  pyproject.toml
frost/src/: lib.rs
src/: lib.rs
src/main/java/: Main.java
src/main/java/device/: Device.java
src/main/java/event/: NostrEvent.java
src/main/java/keymanagement/: DistributedKeyGeneration.java  KeyGeneration.java  KeyManager.java
src/main/java/signing/: AutomaticSigner.java  EventValidator.java  FrostThresholdSignature.java  ThresholdSignature.java
